--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_with model: [ @article, @article.comments.build ] do |form| %>
   <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
+    <%= form.text_field :commenter, placeholder:"Nome", class:"form-control" %>
   </p>
   <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
+    <%= form.text_area :body, maxlength:200, rows:3, placeholder:"Comentário", class:"form-control" %>
   </p>
   <p>
-    <%= form.submit %>
+  <div class="d-grid mb-4">
+    <%= form.submit "Criar Comentário", class:"btn btn-secondary" %>
+  </div>
   </p>
 <% end %>
