--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New Article</h1>
+<div class="mt-5 mb-5">
+  <h3>Novo Artigo</h3>
 
-<%= render "form", article: @article %>
+  <%= render "form", article: @article %>
+</div>
