--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,16 +1,14 @@
-<p>
-  <strong>Commenter:</strong>
-  <%= comment.commenter %>
-</p>
-
-<p>
-  <strong>Comment:</strong>
-  <%= comment.body %>
-</p>
-
-<p>
-  <%= link_to "Destroy Comment", [comment.article, comment], data: {
-                turbo_method: :delete,
-                turbo_confirm: "Are you sure?"
-              } %>
-</p>
+<div class="col-sm-6 mb-2">
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title"><%= comment.commenter %></h5>
+      <p class="card-text"><%= comment.body %></p>
+      <div class="d-flex justify-content-end">
+        <%= link_to "Deletar comentário", [comment.article, comment], class:"btn btn-danger", role:"button", data: {
+                  turbo_method: :delete,
+                  turbo_confirm: "Tem certeza que deseja apagar o comentário?"
+                } %>
+      </div>
+    </div>
+  </div>
+</div>
